# ml_e2e_project

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
ml_e2e_project/: dataset.py  features.py  plots.py
ml_e2e_project/modeling/: predict.py  train.py
